findbugs: Method invokes inefficient Number ctor; use valueOf instead